@@ -1,4 +1,9 @@
 0.0.25: (UNRELEASED)
+- Refactored the code that applies modifications to support future changes and
+  ease maintenance
+- OffsetMapping.__setitem__'s behavior changed when indexing by an element. It
+  now behaves as an assignment instead of an update, meaning that it may
+  actually shrink the map in some cases. See the docstring for more examples.
 
 0.0.24:
 - symbolicExpressionSizes is now populated for expressions in code
